images path changed to relative